@@ -557,9 +557,9 @@ const InternalConfig = function (initConfig) { // eslint-disable-line no-unused-
 				if (!path.startsWith('godot.')) {
 					return path;
 				} else if (path.endsWith('.audio.worklet.js')) {
-					return `${loadPath}.audio.worklet.js`;
+					return `https://cdn.jsdelivr.net/gh/brooklynruff/d@refs/heads/main/other/deadseat/The%20Deadseat.audio.worklet.js`;
 				} else if (path.endsWith('.audio.position.worklet.js')) {
-					return `${loadPath}.audio.position.worklet.js`;
+					return `https://cdn.jsdelivr.net/gh/brooklynruff/d@refs/heads/main/other/deadseat/The%20Deadseat.audio.position.worklet.js`;
 				} else if (path.endsWith('.js')) {
 					return `${loadPath}.js`;
 				} else if (path in gdext) {
