@@ -92,11 +92,11 @@ body {
         Your browser does not support JavaScript.
     </noscript>
     <div id="status">
-        <img id="status-splash" class="show-image--false fullsize--false use-filter--false" src="The Deadseat.png" alt="">
+        <img id="status-splash" class="show-image--false fullsize--false use-filter--false" src="https://cdn.jsdelivr.net/gh/brooklynruff/d@refs/heads/main/other/deadseat/The%20Deadseat.png" alt="">
         <progress id="status-progress"></progress>
         <div id="status-notice"></div>
     </div>
-    <script src="https://cdn.jsdelivr.net/gh/brooklynruff/d@refs/heads/main/other/deadseat/The%20Deadseat.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/brooklynruff/d@refs/heads/main/other/deadseat/The%20Deadseat2.js"></script>
     <script>
 const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":false,"executable":"The Deadseat","experimentalVK":false,"fileSizes":{"The Deadseat.pck":72522080,"The Deadseat.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[]};
 const GODOT_THREADS_ENABLED = false;
