@@ -1,2 +1,5 @@
+12/13/2025:
+[+] Added The Deadseat (Thanks for the suggestion Muffet<3)
+
 12/12/2025:
 [+] Added Zombotron 1-3 (Thanks for the suggestion "Timmy and Malik")
