@@ -1295,6 +1295,10 @@
     "Zombotron 3": {
         "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/credgames/zombotron3.xml",
         "img": "zombotron3.webp"
+    },
+    "The Deadseat": {
+        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@refs/heads/main/other/deadseat/game.xml",
+        "img": "thedeadseat.jpg"
     }
   },
   "categories": {
