@@ -20,6 +20,9 @@ people who don't  have a clue  what they're doing and use ChatGPT to  "code"
 their infrastructure. No Name Games has and will stay on top of the competi-
 tion.
 ==================================CHANGELOG=================================
+12/13/2025:
+[+] Added The Deadseat (Thanks for the suggestion Muffet<3)
+
 12/12/2025:
 [+] Added Zombotron 1-3 (Thanks for the suggestion "Timmy and Malik")
 
